--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -8351,9 +8351,15 @@
     btn_edit_prod As button:
         Align: =Align.Right
         Height: =23
-        OnSelect: |-
-            =Navigate(Tela_Inicial_Producao,ScreenTransition.None);
-            Set(vartela , "Tela_acerto_levantamento")
+        OnSelect: |
+            =//Navigate(Tela_Inicial_Producao;ScreenTransition.None);;
+            //Set(vartela ; "Tela_acerto_levantamento")
+            Navigate(AcertoProdução);
+            Reset(DatePicker2);
+            Reset(SelectUte);
+            Reset(SelectCaf);
+            Reset(SelectOp);
+            Set(ALARME_PROD,true)
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =8
@@ -8376,8 +8382,14 @@
         Align: =Align.Right
         Height: =23
         OnSelect: |-
-            =Navigate(Tela_Inicial_Perdas,ScreenTransition.None);
-            Set(vartela , "Tela_acerto_levantamento")
+            =//Navigate(Tela_Inicial_Perdas;ScreenTransition.None);;
+            //Set(vartela ; "Tela_acerto_levantamento")
+            Navigate(AcertoPerdas);
+            Reset(DatePicker2_1);
+            Reset(SelectUte_1);
+            Reset(SelectCaf_1);
+            Reset(SelectOp_1);
+            Set(ALARME_PERDAS,true)
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =25
