--- a/Levantamento de Perdas/Src/AcertoProdu%e7%e3o.fx.yaml
+++ b/Levantamento de Perdas/Src/AcertoProdu%e7%e3o.fx.yaml
@@ -49,6 +49,7 @@ AcertoProdução As screen:
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplateSize: =28
+        Transition: =Transition.Pop
         Width: =617
         X: =24
         Y: =186
@@ -359,6 +360,7 @@ AcertoProdução As screen:
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplateSize: =28
+        Transition: =Transition.Pop
         Width: =617
         X: =661
         Y: =186
@@ -528,8 +530,61 @@ AcertoProdução As screen:
         Height: =45
         Size: =15
         Text: =DatePicker2.SelectedDate
+        Visible: =false
         Width: =125
         X: =1153
         Y: =60
         ZIndex: =31
+
+    Icon1_50 As icon.Home:
+        BorderColor: =RGBA(255, 255, 255, 1)
+        Color: =RGBA(255, 255, 255, 1)
+        FocusedBorderThickness: =1
+        Height: =45
+        Icon: =Icon.BackArrow
+        OnSelect: |
+            =Back()
+        Width: =45
+        ZIndex: =32
+
+    POPUP_PROD As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =36
+
+        Rectangle4 As rectangle:
+            Height: =448
+            Visible: =ALARME_PROD
+            Width: =877
+            X: =202
+            Y: =199
+            ZIndex: =33
+
+        Label13 As label:
+            Align: =Align.Center
+            Color: =RGBA(255, 255, 255, 1)
+            Height: =205
+            Size: =35
+            Text: ="PARA ACERTO DA PRODUÇÃO É OBRIGATÓRIO EXCLUIR DO APLICATIVO E DO POWER BI"
+            Visible: =ALARME_PROD
+            Width: =690
+            X: =301
+            Y: =228
+            ZIndex: =34
+
+        Icon1_52 As icon.Home:
+            BorderColor: =RGBA(255, 255, 255, 1)
+            Color: =RGBA(255, 255, 255, 1)
+            FocusedBorderThickness: =1
+            Height: =90
+            Icon: =Icon.CancelBadge
+            OnSelect: |
+                =Set(ALARME_PROD,false)
+            Visible: =ALARME_PROD
+            Width: =100
+            X: =602
+            Y: =477
+            ZIndex: =35
 
