--- a/Levantamento de Perdas/Src/Tela_Ini_2911.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2911.fx.yaml
@@ -103,8 +103,14 @@ Tela_Ini_2911 As screen:
         Align: =Align.Right
         Height: =32
         OnSelect: |-
-            =Navigate(Tela_Inicial_Producao,ScreenTransition.None);
-            Set(vartela , "Tela_Ini_2911");
+            =//Navigate(Tela_Inicial_Producao;ScreenTransition.None);;
+            //Set(vartela ; "Tela_Ini_2911");;
+            Navigate(AcertoProdução);
+            Reset(DatePicker2);
+            Reset(SelectUte);
+            Reset(SelectCaf);
+            Reset(SelectOp);
+            Set(ALARME_PROD,true)
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =8
@@ -129,8 +135,14 @@ Tela_Ini_2911 As screen:
         Align: =Align.Right
         Height: =32
         OnSelect: |-
-            =Navigate(Tela_Inicial_Perdas,ScreenTransition.None);
-            Set(vartela , "Tela_Ini_2911");
+            =//Navigate(Tela_Inicial_Perdas;ScreenTransition.None);;
+            //Set(vartela ; "Tela_Ini_2911");;
+            Navigate(AcertoPerdas);
+            Reset(DatePicker2_1);
+            Reset(SelectUte_1);
+            Reset(SelectCaf_1);
+            Reset(SelectOp_1);
+            Set(ALARME_PERDAS,true)
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =25
