--- a/Levantamento de Perdas/Src/AcertoPerdas.fx.yaml
+++ b/Levantamento de Perdas/Src/AcertoPerdas.fx.yaml
@@ -376,7 +376,7 @@ AcertoPerdas As screen:
         Height: =25
         Text: ="UTE"
         Width: =53
-        X: =802
+        X: =792
         Y: =157
         ZIndex: =26
 
@@ -386,7 +386,7 @@ AcertoPerdas As screen:
         Height: =25
         Text: ="CAF"
         Width: =53
-        X: =910
+        X: =890
         Y: =157
         ZIndex: =27
 
@@ -396,7 +396,7 @@ AcertoPerdas As screen:
         Height: =25
         Text: ="HORA"
         Width: =65
-        X: =1014
+        X: =974
         Y: =157
         ZIndex: =28
 
@@ -404,9 +404,9 @@ AcertoPerdas As screen:
         Align: =Align.Center
         Color: =RGBA(255, 255, 255, 1)
         Height: =25
-        Text: ="OP."
-        Width: =53
-        X: =1098
+        Text: ="PERDA"
+        Width: =83
+        X: =1066
         Y: =157
         ZIndex: =29
 
@@ -414,9 +414,9 @@ AcertoPerdas As screen:
         Align: =Align.Center
         Color: =RGBA(255, 255, 255, 1)
         Height: =25
-        Text: ="PROD."
+        Text: ="QTD."
         Width: =65
-        X: =1174
+        X: =1164
         Y: =157
         ZIndex: =30
 
