--- a/Levantamento de Perdas/Src/Tela_Ini_2913.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2913.fx.yaml
@@ -183,6 +183,10 @@ Tela_Ini_2913 As screen:
             Reset(DatePicker2);
             Reset(SelectUte);
             Reset(SelectCaf);
+            Reset(DatePicker2);
+            Reset(SelectUte);
+            Reset(SelectSetor);
+            Reset(SelectCaf);
             Set(ALARME_PROD,true)
         PaddingBottom: =0
         PaddingLeft: =0
@@ -215,6 +219,7 @@ Tela_Ini_2913 As screen:
             Reset(SelectUte_1);
             Reset(SelectCaf_1);
             Reset(SelectOp_1);
+            Reset(SelectSetor2);
             Set(ALARME_PERDAS,true)
         PaddingBottom: =0
         PaddingLeft: =0
