--- a/Levantamento de Perdas/Src/AcertoPerdas.fx.yaml
+++ b/Levantamento de Perdas/Src/AcertoPerdas.fx.yaml
@@ -28,7 +28,7 @@ AcertoPerdas As screen:
             =Navigate(Tela_Inicial_app)
         Tooltip: ="Menu"
         Width: =45
-        X: =109
+        X: =18
         Y: =60
         ZIndex: =3
 
@@ -231,7 +231,7 @@ AcertoPerdas As screen:
         SelectMultiple: =false
         Size: =12
         Width: =188
-        X: =571
+        X: =445
         Y: =70
         ZIndex: =13
 
@@ -251,7 +251,7 @@ AcertoPerdas As screen:
         SelectMultiple: =false
         Size: =12
         Width: =138
-        X: =398
+        X: =286
         Y: =70
         ZIndex: =14
 
@@ -259,7 +259,7 @@ AcertoPerdas As screen:
         Height: =35
         Size: =13
         Width: =175
-        X: =181
+        X: =90
         Y: =70
         ZIndex: =15
 
@@ -269,17 +269,17 @@ AcertoPerdas As screen:
         Height: =35
         HoverFill: =RGBA(0, 0, 0, 0)
         IsSearchable: =false
-        Items: =Distinct(Filter(LancamentoPerdas, MAQUINA = SelectCaf_1.Selected.Value),TIPO_DE_PERDA)
+        Items: =Distinct(Filter(LancamentoPerdas, SETOR = SelectSetor2.Selected.Value),TIPO_DE_PERDA)
         PaddingBottom: =2
         PaddingLeft: =10
         PaddingRight: =10
         PaddingTop: =2
-        SearchFields: =[""]
-        SearchItems: =[]
+        SearchFields: =["Value"]
+        SearchItems: =Search(Distinct(Filter(LancamentoPerdas, SETOR = SelectSetor2.Selected.Value),TIPO_DE_PERDA),SelectOp_1.SearchText,Value)
         SelectMultiple: =false
         Size: =12
-        Width: =314
-        X: =796
+        Width: =296
+        X: =924
         Y: =70
         ZIndex: =16
 
@@ -293,6 +293,7 @@ AcertoPerdas As screen:
             =Reset(DatePicker2_1);
             Reset(SelectUte_1);
             Reset(SelectCaf_1);
+            Reset(SelectSetor2);
             Reset(SelectOp_1)
         PaddingBottom: =5
         PaddingLeft: =5
@@ -300,7 +301,7 @@ AcertoPerdas As screen:
         PaddingTop: =5
         Tooltip: ="Limpar Filtros"
         Width: =44
-        X: =1147
+        X: =1238
         Y: =68
         ZIndex: =17
 
@@ -310,7 +311,7 @@ AcertoPerdas As screen:
         Size: =15
         Text: ="Data"
         Width: =77
-        X: =181
+        X: =90
         Y: =46
         ZIndex: =18
 
@@ -320,7 +321,7 @@ AcertoPerdas As screen:
         Size: =15
         Text: ="Ute"
         Width: =77
-        X: =398
+        X: =286
         Y: =42
         ZIndex: =19
 
@@ -330,7 +331,7 @@ AcertoPerdas As screen:
         Size: =14
         Text: ="CAF"
         Width: =77
-        X: =571
+        X: =445
         Y: =43
         ZIndex: =20
 
@@ -340,7 +341,7 @@ AcertoPerdas As screen:
         Size: =14
         Text: ="Tipo de Perda"
         Width: =154
-        X: =796
+        X: =922
         Y: =43
         ZIndex: =21
 
@@ -538,13 +539,33 @@ AcertoPerdas As screen:
         BorderColor: =RGBA(255, 255, 255, 1)
         Color: =RGBA(255, 255, 255, 1)
         FocusedBorderThickness: =1
-        Height: =45
+        Height: =35
         Icon: =Icon.BackArrow
         OnSelect: |
             =Back()
         Tooltip: ="Voltar"
-        Width: =45
+        Width: =35
         ZIndex: =33
+
+    SelectSetor2 As combobox:
+        BorderThickness: =1
+        DisplayFields: =["Value"]
+        Height: =35
+        HoverFill: =RGBA(0, 0, 0, 0)
+        IsSearchable: =false
+        Items: =Distinct(Filter(LancamentoPerdas, MAQUINA = SelectCaf_1.Selected.Value),SETOR)
+        PaddingBottom: =2
+        PaddingLeft: =10
+        PaddingRight: =10
+        PaddingTop: =2
+        SearchFields: =["Value"]
+        SearchItems: =Search(Distinct(Filter(LancamentoPerdas, MAQUINA = SelectCaf_1.Selected.Value),SETOR),SelectSetor2.SearchText,Value)
+        SelectMultiple: =false
+        Size: =12
+        Width: =254
+        X: =650
+        Y: =70
+        ZIndex: =37
 
     POPUP_PERDA As group:
         Height: =5
@@ -587,4 +608,14 @@ AcertoPerdas As screen:
             X: =602
             Y: =477
             ZIndex: =36
+
+    Label6_39 As label:
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =28
+        Size: =14
+        Text: ="SETOR"
+        Width: =154
+        X: =647
+        Y: =43
+        ZIndex: =38
 
