--- a/Levantamento de Perdas/Src/Tela_Ini_2915.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2915.fx.yaml
@@ -85,6 +85,10 @@ Tela_Ini_2915 As screen:
             Reset(DatePicker2);
             Reset(SelectUte);
             Reset(SelectCaf);
+            Reset(DatePicker2);
+            Reset(SelectUte);
+            Reset(SelectSetor);
+            Reset(SelectCaf);
             Set(ALARME_PROD,true)
         PaddingBottom: =0
         PaddingLeft: =0
@@ -117,6 +121,7 @@ Tela_Ini_2915 As screen:
             Reset(SelectUte_1);
             Reset(SelectCaf_1);
             Reset(SelectOp_1);
+            Reset(SelectSetor2);
             Set(ALARME_PERDAS,true)
         PaddingBottom: =0
         PaddingLeft: =0
