--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -8412,6 +8412,7 @@
         ZIndex: =599
 
     HtmlText1 As htmlViewer:
+        DisabledBorderColor: =RGBA(56, 56, 56, 1)
         Fill: =RGBA(209, 232, 178, 1)
         Height: =82
         HtmlText: |-
