--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -5,14 +5,15 @@
       "DataflowAnalysisEnabled": false,
       "DataflowAnalysisFlagStateToggledByUser": false
     },
-    "DocVersion": "1.341",
+    "DocVersion": "1.346",
     "MinVersionToLoad": "1.331",
-    "MSAppStructureVersion": "2.0"
+    "MSAppStructureVersion": "2.4.0"
   },
   "Properties": {
     "AppCreationSource": "AppFromSharePoint",
     "AppDescription": "Aplicativo para lançamento de Produção e perdas na unidade Transmissões em Betim.",
     "AppPreviewFlagsMap": {
+      "adaptivepaging": false,
       "aibuilderserviceenrollment": false,
       "allowmultiplescreensincanvaspages": false,
       "appinsightserrortracing": false,
@@ -22,7 +23,7 @@
       "blockmovingcontrol": true,
       "cdsdataformatting": false,
       "classiccontrols": false,
-      "commentgeneratedformulas": true,
+      "commentgeneratedformulasv2": false,
       "consistentreturnschemafortabularfunctions": true,
       "copyandmerge": true,
       "dataflowanalysisenabled": false,
@@ -32,21 +33,24 @@
       "delayloadscreens": true,
       "disablebehaviorreturntypecheck": false,
       "disablecdsfileandlargeimage": false,
+      "disablefallbacktopayamlv2": false,
       "disableruntimepolicies": false,
       "dynamicschema": false,
       "enableappembeddingux": false,
       "enablecanvasappruntimecopilot": false,
-      "enablechatbotfeature": false,
       "enablecomponentnamemaps": false,
       "enablecomponentscopeoldbehavior": false,
       "enablecopilotanswercontrol": false,
       "enablecopilotcontrol": false,
+      "enablecreateaformula": false,
       "enabledataverseoffline": false,
       "enableeditcacherefreshfrequency": false,
       "enableeditinmcs": false,
       "enableexcelonlinebusinessv2connector": true,
       "enableideaspanel": true,
+      "enableideaspanelbyexample": false,
       "enablelegacybarcodescanner": false,
+      "enablelegacydatatable": false,
       "enableonstart": true,
       "enableonstartnavigate": false,
       "enablepcfmoderndatasets": true,
@@ -67,26 +71,29 @@
       "improvedtabstopbehavior": true,
       "isemptyrequirestableargument": true,
       "keeprecentscreensloaded": true,
+      "loadcomponentdefinitionsondemand": true,
       "longlivingcache": false,
       "mobilenativerendering": false,
       "nativecdsexperimental": true,
+      "offlineprofilegenerationemitscolumns": false,
       "onegrid": false,
       "optimizedforteamsmeeting": false,
+      "optimizestartscreenpublishedappload": true,
       "packagemodernruntime": false,
-      "parallelcodegen": false,
       "pdffunction": false,
       "powerfxdecimal": false,
       "powerfxv1": false,
+      "preferpayamlv2inux": false,
       "primaryoutputpropertycoerciondeprecated": true,
+      "proactivecontrolrename": false,
       "projectionmapping": true,
-      "reactformulabar": false,
       "reliableconcurrent": true,
       "reservedkeywords": false,
       "rtlinstudiopreview": false,
       "rtlsupport": false,
+      "sharepointselectsenabled": false,
       "showclassicthemes": false,
       "smartemaildatacard": false,
-      "sqlstoredprocedureenabled": false,
       "supportcolumnnamesasidentifiers": true,
       "tabledoesntwraprecords": true,
       "usedisplaynamemetadata": true,
@@ -96,11 +103,13 @@
       "useguiddatatypes": true,
       "usenonblockingonstartrule": true,
       "userdefinedfunctions": false,
+      "userdefinedtypes": false,
       "webbarcodescanner": false,
       "zeroalltabindexes": false
     },
     "Author": "",
     "BindingErrorCount": 2,
+    "ConnectionString": "",
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 1000,
     "DocumentAppType": "Phone",
@@ -114,7 +123,6 @@
     "EnableInstrumentation": false,
     "FileID": "c94859fd-2ebb-4cb5-abca-4ae066f946de",
     "Id": "3aaae7a9-6de1-4749-802c-2ff7999f4249",
-    "InstrumentationKey": "",
     "LocalDatabaseReferences": "",
     "ManualOfflineProfileId": "",
     "Name": "Levantamento de Perdas - Transmissões",
