--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -131,7 +131,7 @@
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "df495314-60ba-44f5-9408-8144ffe069c0",
+    "AppName": "Levantamento de Perdas - Transmissões",
     "BackgroundColor": "rgba(255, 255, 255, 1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "",
