--- a/Levantamento de Perdas/Other/Src/Usinagem_Eixo_Secund_rio.pa.yaml
+++ b/Levantamento de Perdas/Other/Src/Usinagem_Eixo_Secund_rio.pa.yaml
@@ -317,7 +317,7 @@ Screens:
 
               //ColorFade(RGBA(56; 96; 178; 1); -20%)
             OnSelect: |
-              =Set( varmaquina , "961502088");
+              =Set( varmaquina , "201405005855");
               Set( varsetor ,  Label_setor_3.Text );
               Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
               Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -332,3 +332,27 @@ Screens:
             Width: =168
             X: =152
             Y: =864
+      - Image2:
+          Control: Image@2.2.3
+          Properties:
+            BorderColor: =RGBA(0, 18, 107, 1)
+            Height: =95
+            Image: ='Captura de tela 2025-07-19 091725'
+            ImagePosition: =ImagePosition.Fill
+            Width: =138
+            X: =4
+            Y: =890
+      - Label14:
+          Control: Label@2.5.1
+          Properties:
+            Align: =Align.Center
+            BorderColor: =RGBA(0, 18, 107, 1)
+            Font: =Font.'Open Sans'
+            Height: =86
+            Size: =15
+            Text: |-
+              ="Raspadora
+              Sicmat 5855
+              OP.: 100"
+            Width: =152
+            Y: =881
