--- a/Levantamento de Perdas/Src/Usinagem_Eixo_Secund%e1rio.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Eixo_Secund%e1rio.fx.yaml
@@ -34,7 +34,7 @@ Usinagem_Eixo_Secundário As screen:
         Width: =168
         X: =310
         Y: =260
-        ZIndex: =15
+        ZIndex: =2
 
     Label_setor_3 As label:
         Height: =70
@@ -43,7 +43,7 @@ Usinagem_Eixo_Secundário As screen:
         Visible: =false
         Width: =560
         X: =41
-        ZIndex: =16
+        ZIndex: =3
 
     Label_Local_3 As button:
         Align: =Align.Left
@@ -55,7 +55,7 @@ Usinagem_Eixo_Secundário As screen:
             UTE 2911"
         Width: =640
         Y: =13
-        ZIndex: =17
+        ZIndex: =4
 
     Icon1_11 As icon.Home:
         BorderColor: =RGBA(255, 255, 255, 1)
@@ -71,7 +71,7 @@ Usinagem_Eixo_Secundário As screen:
         Width: =80
         X: =560
         Y: =13
-        ZIndex: =18
+        ZIndex: =5
 
     Btnmaq_55 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
@@ -97,7 +97,7 @@ Usinagem_Eixo_Secundário As screen:
         Width: =168
         X: =310
         Y: =411
-        ZIndex: =19
+        ZIndex: =6
 
     Btnmaq_56 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
@@ -123,7 +123,7 @@ Usinagem_Eixo_Secundário As screen:
         Width: =168
         X: =152
         Y: =562
-        ZIndex: =20
+        ZIndex: =7
 
     Btnmaq_57 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
@@ -149,7 +149,7 @@ Usinagem_Eixo_Secundário As screen:
         Width: =168
         X: =468
         Y: =562
-        ZIndex: =21
+        ZIndex: =8
 
     Btnmaq_58 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
@@ -175,7 +175,7 @@ Usinagem_Eixo_Secundário As screen:
         Width: =168
         X: =468
         Y: =714
-        ZIndex: =22
+        ZIndex: =9
 
     Btnmaq_59 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
@@ -201,7 +201,7 @@ Usinagem_Eixo_Secundário As screen:
         Width: =168
         X: =468
         Y: =864
-        ZIndex: =23
+        ZIndex: =10
 
     Btnmaq_60 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
@@ -227,7 +227,7 @@ Usinagem_Eixo_Secundário As screen:
         Width: =168
         X: =152
         Y: =714
-        ZIndex: =24
+        ZIndex: =11
 
     Btnmaq_61 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
@@ -240,7 +240,7 @@ Usinagem_Eixo_Secundário As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "961502088");
+            =Set( varmaquina , "201405005855");
             Set( varsetor ,  Label_setor_3.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -253,5 +253,26 @@ Usinagem_Eixo_Secundário As screen:
         Width: =168
         X: =152
         Y: =864
-        ZIndex: =25
+        ZIndex: =12
+
+    Image2 As image:
+        Height: =95
+        Image: ='Captura de tela 2025-07-19 091725'
+        ImagePosition: =ImagePosition.Fill
+        Width: =138
+        X: =4
+        Y: =890
+        ZIndex: =13
+
+    Label14 As label:
+        Align: =Align.Center
+        Height: =86
+        Size: =15
+        Text: |-
+            ="Raspadora
+            Sicmat 5855
+            OP.: 100"
+        Width: =152
+        Y: =881
+        ZIndex: =14
 
